<resources>
    <string name="app_name">Image Gallery</string>
    <string name="search_menu_title">Search</string>
    <string name="author">Iron Man</string>
    <string name="author_id">ironman@82</string>
    <string name="email_hint">Email</string>
    <string name="example_email">jane@example.com</string>
    <string name="example_password">jane123</string>
    <string name="log_in">Log In</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="title">Image Gallery</string>
    <string name="todo">TODO</string>
    <string name="all_results">All Results</string>
    <string name="browse_all">Browse all</string>
    <string name="chats">Chats</string>
    <string name="discover">Discover</string>
    <string name="follow_user">Follow Jane</string>
    <string name="message">Message</string>
    <string name="message_example_text_1">Really love your most recent photo. I\'ve been trying to capture the same thing for a few months and would love some tips!</string>
    <string name="message_example_text_2">A fast 50mm like f1.8 would help with the bokeh. I\'ve been using primes as they tend to get a bit sharper images.</string>
    <string name="message_hint">Type a Message</string>
    <string name="name_hint">Your Name</string>
    <string name="next">Next</string>
    <string name="recent_message_example_text">Hey there!</string>
    <string name="search">Search</string>
    <string name="sign_up">Sign Up</string>
    <string name="user">Jane</string>
    <string name="user_city">San Francisco, CA</string>
    <string name="user_id">jane@123</string>
    <string name="recently_added">Recently added</string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>
    <string name="no_photos_yet">No photos yet!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="city_hint">City, Country</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="search_users">Search users</string>
    <string name="no_users_found">No users found !</string>
    <string name="pick_image_from">Pick Image From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
</resources>