<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <Button style="@style/button_back"/>

    <TextView
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/edit_profile"
        style="@style/title" />

    <androidx.cardview.widget.CardView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        app:cardCornerRadius="64dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:background="@drawable/circle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_change_profile_photo"
        android:paddingVertical="12dp"
        android:layout_gravity="center"
        android:textColor="@color/link"
        android:text="@string/change_profile_photo"
        style="@style/sub_title" />

    <EditText
        android:id="@+id/et_name"
        android:text="@string/user"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        style="@style/input_text" />

    <EditText
        android:id="@+id/et_city"
        android:text="@string/user_city"
        android:hint="@string/city_hint"
        android:inputType="textPersonName"
        style="@style/input_text" />

    <Button
        android:id="@+id/btn_update"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/update"
        style="@style/button_dark" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>
