<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button style="@style/button_back" />

    <TextView
        android:layout_margin="24dp"
        android:text="@string/log_in"
        style="@style/title" />

    <EditText
        android:id="@+id/et_email"
        style="@style/input_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:text="@string/example_email" />

    <EditText
        android:id="@+id/et_password"
        android:text="@string/example_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        style="@style/input_text" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/log_in"
        style="@style/button_dark" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>
