<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:background="@drawable/circle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/profile2"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:fontFamily="@font/roboto_bold"/>

        <TextView
            android:textSize="11sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_id"
            android:fontFamily="@font/roboto" />

    </LinearLayout>

</LinearLayout>
