<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:scrollbarSize="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo"/>

            <TextView
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/user" style="@style/title"/>

            <TextView
                android:layout_marginBottom="24dp"
                android:text="@string/user_city"
                style="@style/sub_title"/>

            <Button
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/follow_user"
                style="@style/button_dark"/>

            <Button
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/message"
                style="@style/button_light"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/user_gallery_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/divider">

                    <include layout="@layout/gallery_image"/>

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/user_gallery_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/divider">

                    <include layout="@layout/gallery_image"/>

                </LinearLayout>

            </RelativeLayout>

            <Button
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/see_more"
                style="@style/button_light"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/nav_menu"/>

</RelativeLayout>
