<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_camera"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/pick_image_from" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/btn_camera"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tooltipText="Camera"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/todo"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_camera"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/camera" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/btn_gallery"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tooltipText="Gallery"
            android:src="@drawable/ic_gallery"
            android:contentDescription="@string/todo"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_gallery"
            android:paddingHorizontal="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/gallery" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingHorizontal="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:textColor="#AAFF0000"
        android:textSize="13sp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/cancel" />

</LinearLayout>