<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:background="@drawable/back"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:textSize="48sp"
            android:text="@string/title"
            android:drawablePadding="8dp"
            android:layout_centerInParent="true"
            app:drawableStartCompat="@drawable/logo"
            style="@style/title" />

<!--        <include-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            layout="@layout/user_card" />-->

    </RelativeLayout>

    <LinearLayout
        android:gravity="center"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_login"
            style="@style/button_light"
            android:layout_width="150dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/log_in" />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/register"
            style="@style/button_dark" />

    </LinearLayout>

</LinearLayout>
