<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/border_bottom"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardCornerRadius="32dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle"
            android:src="@drawable/profile"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:id="@+id/tv_name"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:lineSpacingExtra="3sp"
            android:translationY="-1.38sp"
            android:fontFamily="@font/roboto_bold" />

        <TextView
            android:id="@+id/tv_recent_message"
            android:textSize="13sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/recent_message_example_text"
            android:lineSpacingExtra="3sp"
            android:translationY="-1.38sp"
            android:fontFamily="@font/roboto" />

    </LinearLayout>

</LinearLayout>
