<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <ScrollView
        android:id="@+id/main_content"
        android:scrollbarSize="0dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:text="@string/discover"
                style="@style/title"/>

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/recently_added"
                style="@style/sub_title"/>

            <HorizontalScrollView
                android:scrollbarSize="0dp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp">

                <LinearLayout
                    android:id="@+id/card_container"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp">

                    <include layout="@layout/home_card"/>
                    <include layout="@layout/home_card"/>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_marginStart="16dp"
                android:text="@string/browse_all"
                style="@style/sub_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp">

                <LinearLayout
                    android:id="@+id/gallery_left"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/divider">

                    <include layout="@layout/gallery_image"/>

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:id="@+id/gallery_right"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/divider">

                    <include layout="@layout/gallery_image"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/nav_menu"/>

</RelativeLayout>
